@@ -1,3 +1,4 @@
+2420 delete devil.dll in the MeGUI root folder if avisynth.dll is not also available
 2419 [Update] added possibility to use display names for the update files
               added possibility to use .NET requirements for the update files
               improved error handling and log output
